# utils_cmip7

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_md_delta_v0.2.patch  MANIFEST.in  README.md  README_IGBP_EXTRACTION.md  __init__.py  analysis.py  debug_conversion.py  debug_extraction.py  debug_full_pipeline.py  debug_gpp_npp.py  extract_and_plot_raw.py  extract_xqhuj.sh  extract_xqhuj_raw.py  plot.py  plot_legacy.py  pyproject.toml  soil_params_figures.py  soil_params_io.py  soil_params_maps.py  test_canonical_variables.py  test_error_handling.py  test_warnings_suppressed.py  verify_hygiene.py  xqhuj_extract_annual.ipynb  xqhuj_xqhuk_carbon_store.ipynb
.github/workflows/: tests.yml
dev/: debug_plot.py  diagnose_extraction.py
doc/: API_REFERENCE.md  MIGRATION.md
docs/: API.md  API_REFERENCE.md  API_STABILIZATION_PLAN.md  CLI_REFERENCE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  MIGRATION.md  MIGRATION_GUIDE.md  PERFORMANCE.md  SPRINT2_PROGRESS.md  STASH.md  TROUBLESHOOTING.md  VALIDATION_EXPLAINED.md  VALIDATION_METHODS_QUICK_REFERENCE.md  v0.2.2_RELEASE_NOTES.md
docs/ARCHIVE/: API_STABILIZATION_COMPLETE.md  README.md  SPRINT1_COMPLETE.md
docs/ARCHIVE/DESIGN/: NAMING_ANALYSIS.md  REFACTORING_SUMMARY.md  v0.2.1_HYGIENE_CHANGES.md
examples/: validation_threeway_example.py  validation_workflow_example.py  xqhuj_xqhuk_carbon_store.ipynb  xqhul_co2_252.ipynb
scripts/: README.md  clean_overview_table.py  extract_igbp_regional_means.py  extract_preprocessed.py  extract_raw.py  extract_raw.sh  regenerate_igbp_metrics.py  validate_experiment.py  validate_ppe.py
src/utils_cmip7/: __init__.py  cli.py  config.py
src/utils_cmip7/data/obs/: igbp.veg_fraction_metrics.nc  igbp_regional_means.csv
src/utils_cmip7/diagnostics/: __init__.py  extraction.py  metrics.py  raw.py
src/utils_cmip7/io/: __init__.py  extract.py  file_discovery.py  obs_loader.py  stash.py
src/utils_cmip7/plotting/: __init__.py  maps.py  ppe_param_viz.py  ppe_viz.py  spatial.py  styles.py  timeseries.py
src/utils_cmip7/processing/: __init__.py  map_fields.py  metrics.py  regional.py  spatial.py  temporal.py
src/utils_cmip7/soil_params/: __init__.py  params.py  parsers.py
src/utils_cmip7/validation/: __init__.py  compare.py  ensemble_loader.py  outputs.py  overview_table.py  veg_fractions.py  visualize.py
tests/: README.md  run_smoke_tests.py  test_canonical_variables.py  test_cli_auto_detection.py  test_cli_helpers.py  test_config.py  test_extract_raw_overview.py  test_extraction_fix.py  test_imports.py  test_metrics_pre_extracted.py  test_overview_upsert.py  test_plot_fix.py  test_soil_params_parser.py  test_tau_fix.py  test_v04_breaking_changes.py  test_warnings_suppressed.py
tests/test_diagnostics/: test_extraction.py
tests/test_io/: test_extract.py  test_file_discovery.py  test_stash.py
tests/test_plotting/: test_maps.py  test_ppe_scatter.py
tests/test_processing/: test_metrics.py  test_spatial.py  test_temporal.py
tests/test_validation/: test_compare.py  test_outputs.py  test_veg_rmse.py
validation/: benchmark_extraction.py
validation_outputs/: random_sampling_combined_overview_table.csv
validation_outputs/single_val_xqjcg/: comparison_summary.txt  soil_params.json  validation_scores.csv  xqjcg_bias_vs_cmip6.csv  xqjcg_bias_vs_igbp.csv  xqjcg_bias_vs_reccap2.csv  xqjcg_metrics.csv
